# dashboard

./: .env.example  .gitignore  Cargo.toml  README.md  setup.sh
.cargo/: config.toml
front/: data.json  index.html  package.json
front/src/: main.ts  style.css
scripts/: dashboard.py
src/: _modules.rs  actions.rs  draw.js  errors.rs  fft.rs  log.rs  logo.txt  main.rs  models.rs  modules.rs  ops.rs  std.js  tui.rs
