[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
boa_engine = "0.18.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
cpal = "0.15.3"
crossbeam-channel = "0.5.13"
crossterm = { version = "0.27.0" }
rand = "0.8.5"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
