[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
boa_engine = "0.18.0"
crossterm = { version = "0.27.0" }
futures-util = "0.3.30"
rand = "0.8.5"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
reqwest = { version = "0.12.4" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
