[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.26"
color-eyre = "0.6.3"
crossbeam-channel = "0.5.13"
crossterm = { version = "0.27.0", features = ["event-stream"]}
futures = "0.3.30"
futures-util = "0.3.30"
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.25.0" }
once_cell = "1.19.0"
rand = "0.8.5"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
ratatui-image = { version = "1.0.0" }
reqwest = { version = "0.12.4" }
rustpython-stdlib = { version = "0.3.1", features = ["threading"] }
rustpython-vm = { version = "0.3.1", features = ["freeze-stdlib", "threading"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tui-big-text = "0.4.4"

[features]
ssl = ["rustpython-stdlib/ssl", "rustpython-stdlib/ssl-vendor"]

